# slurm-dash

./: .gitignore  README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml
app/assets/: capture.py  init_db.py  inject_interceptor.py  sbatch_wrapper.sh.tmpl
app/src/: config.rs  db.rs  jobs.rs  launcher.rs  main.rs  models.rs  pidfile.rs  routes.rs  setup.rs  slurm.rs  snapshot.rs  state.rs  sync.rs  views.rs
daemon/: Cargo.toml
daemon/src/: config.rs  db.rs  jobs.rs  main.rs  models.rs  routes.rs  slurm.rs  snapshot.rs  ssh.rs  state.rs
src/slurm_dash/: __init__.py  cli.py  config.py  jobs.py  output_inferrer.py  output_probe.py  remote_manager.py  slurm_api.py  sync_engine.py
src/slurm_dash/remote_payload/: capture.py
src/slurm_dash/ui/: __init__.py  tui.py
src/slurm_dash/web/: app.py  routes.py
src/slurm_dash/web/templates/: dashboard.html  layout.html
src/slurm_dash/web/templates/partials/: files_modal.html  jobs_table.html  outputs_tab.html  snapshot_file_list.html  snapshot_preview.html  squeue_modal.html  tag_filter_bar.html
tests/: job.sh  stress_submit.sh
tests/lumi_test/: .gitignore  dummy_workload.py  lumi_job.sh
tests/mahti_test/: dummy_workload.py  mahti_job.sh
