[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm-dash"
version = "0.1.0"
description = "Hybrid local/remote Slurm job tracking system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "platformdirs",
    "textual",
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
]

[project.scripts]
slurm-dash = "slurm_dash.cli:main"

[tool.setuptools.package-data]
slurm_dash = ["web/templates/**/*", "web/templates/*"]
