[package]
name = "slurm-dash"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "slurm-dash"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["compression-gzip", "trace"] }
rusqlite = { version = "0.32", features = ["bundled"] }
maud = { version = "0.27", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
regex = "1"
once_cell = "1"
shell-escape = "0.1"
directories = "5"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
async-stream = "0.3"
urlencoding = "2"
csv = "1"
base64 = "0.22"
open = "5"
libc = "0.2"
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
